--- a/public/404.html
+++ b/public/404.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>We're sorry, but something went wrong (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
     background-color: #EFEFEF;
-    color: #2E2F30;
+    color: ##75C9C8;
     text-align: center;
     font-family: arial, sans-serif;
     margin: 0;
@@ -19,11 +19,7 @@
   }
 
   .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
+    border: 5px solid #858AE3;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
     background-color: white;
@@ -32,36 +28,31 @@
   }
 
   .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
+    color: #858AE3;
+    line-height: 2em;
   }
 
-  .rails-default-error-page div.dialog > p {
+  .rails-default-error-page div.dialog > h2 {
     margin: 0 0 1em;
     padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
+    background-color: white;
+    border: 5px solid #858AE3;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
+    border-top-color: #858AE3;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+    color: grey;
   }
   </style>
 </head>
 
 <body class="rails-default-error-page">
-  <!-- This file lives in public/404.html -->
+  <!-- This file lives in public/500.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h1>Oooops</h1>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <h2>Go back, don't leave your buddy alone !</h2>
   </div>
-</body>
+  <iframe src="https://giphy.com/embed/gfsQffBnuc6e096brx" width="440" height="440" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/rabbit-muffin-and-nuts-feel-blue-gfsQffBnuc6e096brx"></a></p></body>
 </html>
