--- a/public/500.html
+++ b/public/500.html
@@ -4,7 +4,7 @@
   <title>We're sorry, but something went wrong (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
+  .error-page {
     background-color: #EFEFEF;
     color: ##75C9C8;
     text-align: center;
@@ -12,13 +12,13 @@
     margin: 0;
   }
 
-  .rails-default-error-page div.dialog {
+  .error-page div.dialog {
     width: 95%;
     max-width: 33em;
     margin: 4em auto 0;
   }
 
-  .rails-default-error-page div.dialog > div {
+  .error-page div.dialog > div {
     border: 5px solid #FFA62B;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
@@ -27,12 +27,12 @@
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
 
-  .rails-default-error-page h1 {
+  .error-page h1 {
     color: #FFA62B;
     line-height: 2em;
   }
 
-  .rails-default-error-page div.dialog > h2 {
+  .error-page div.dialog > h2 {
     margin: 0 0 1em;
     padding: 1em;
     background-color: white;
@@ -46,7 +46,7 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="error-page">
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <div>
