--- a/public/404.html
+++ b/public/404.html
@@ -6,10 +6,10 @@
   <style>
   .error-page {
     background-color: #EFEFEF;
-    color: ##75C9C8;
     text-align: center;
     font-family: arial, sans-serif;
     margin: 0;
+    color: grey;
   }
 
   .error-page div.dialog {
@@ -32,7 +32,7 @@
     line-height: 2em;
   }
 
-  .page div.dialog > h2 {
+  h2 {
     margin: 0 0 1em;
     padding: 1em;
     background-color: white;
